@@ -6,7 +6,7 @@
 /*   By: owhearn <owhearn@student.codam.nl>           +#+                     */
 /*                                                   +#+                      */
 /*   Created: 2025/08/01 11:48:40 by owhearn       #+#    #+#                 */
-/*   Updated: 2025/08/28 06:22:13 by owhearn       ########   odam.nl         */
+/*   Updated: 2025/09/29 23:16:30 by owhearn       ########   odam.nl         */
 /*                                                                            */
 /* ************************************************************************** */
 
@@ -22,8 +22,8 @@ int	identify_type(t_token *list)
 	{
 		if (list->string[1] && list->string[1] == '<')
 			list->type = HEREDOC;
-		else if (list->string[1])
-			return (printf("unexpected eof\n"), 1);
+		// else if (list->string[1])
+		// 	return (printf("unexpected eof\n"), 1);
 		else
 			list->type = INPUT;
 	}
@@ -31,8 +31,8 @@ int	identify_type(t_token *list)
 	{
 		if (list->string[1] && list->string[1] == '>')
 			list->type = APPEND;
-		else if (list->string[1])
-			return (printf("unexpected eof\n"), 1);
+		// else if (list->string[1])
+		// 	return (printf("unexpected eof\n"), 1);
 		else
 			list->type = OUTPUT;
 	}
@@ -48,21 +48,21 @@ void	print_tokenlist(t_token *list)
 	{
 		printf("Type: ");
 		if (list->type == EMPTY)
-			printf("[EMPTY]-String [%s]\n", list->string);
+			printf("[EMPTY][CONCATONATE = %i]-String [%s]\n", list->concat, list->string);
 		else if (list->type == ARG)
-			printf("[ARG]-String [%s]\n", list->string);
+			printf("[ARG][CONCATONATE = %i]-String [%s]\n", list->concat, list->string);
 		else if (list->type == NOEXPAND)
-			printf("[NOEXPAND]-String [%s]\n", list->string);
+			printf("[NOEXPAND][CONCATONATE = %i]-String [%s]\n", list->concat, list->string);
 		else if (list->type == PIPE)
-			printf("[PIPE]-String [%s]\n", list->string);
+			printf("[PIPE][CONCATONATE = %i]-String [%s]\n", list->concat, list->string);
 		else if (list->type == INPUT)
-			printf("[INPUT]-String [%s]\n", list->string);
+			printf("[INPUT][CONCATONATE = %i]-String [%s]\n", list->concat, list->string);
 		else if (list->type == OUTPUT)
-			printf("[OUTPUT]-String [%s]\n", list->string);
+			printf("[OUTPUT][CONCATONATE = %i]-String [%s]\n", list->concat, list->string);
 		else if (list->type == HEREDOC)
-			printf("[HEREDOC]-String [%s]\n", list->string);
+			printf("[HEREDOC][CONCATONATE = %i]-String [%s]\n", list->concat, list->string);
 		else if (list->type == APPEND)
-			printf("[APPEND]-String [%s]\n", list->string);
+			printf("[APPEND][CONCATONATE = %i]-String [%s]\n", list->concat, list->string);
 		list = list->next;
 	}
 	printf("-------------------------\n\n");
