@@ -1,3 +1,3 @@
 #!/bin/bash
 
-echo $3USER
+echo $3USER >test.txt
