@@ -8,3 +8,13 @@
 ## MAX
 - BULLETINS: Add ft_export, ft_pwd, ft_echo
 - EXECUTORS: Finish for now
+
+
+----------------------------------------------------------------------------------
+
+#10/09/25
+## MAX
+- LIBFT: edited some of the added libft functions so they compile on my laptop
+- PARSING:	- expand_args is now fully working.
+			- concatonation roughly planned out.
+			- input/output redirect logic rough plans
